# fastapi_chat

./: .gitignore  Dockerfile  Makefile  pyproject.toml
docker/: .docker.env  app-compose.yml  dev-compose.yml  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.kafka.yml  docker-compose.mongo-express.yml  docker-compose.mongo.yml  docker-compose.proxy-tls.yml  docker-compose.proxy.yml  kafka-compose.yml  mongo-compose.yml
src/: config.py  container.py  dependencies.py  exceptions.py  lifespan.py  main.py  schemas.py  user_chats_repo.py  utils.py
src/chats/: dependencies.py  exceptions.py  repository.py  schemas.py  service.py  views.py
src/chats/group_chats/: repository.py  schemas.py  views.py
src/chats/private_chats/: repository.py
src/messages/: factories.py  repository.py  schemas.py  service.py  utils.py  views.py
src/models/: chat.py  message.py  user.py
src/mongo/: __init__.py
src/private_messenger/: exceptions.py  repository.py  schemas.py  utils.py  views.py
src/repositories/: chats.py  messages.py
src/repositories/base/: base.py  base_chats.py  base_messages.py
src/routers/: chats.py  group_messages.py  private_messages.py  websockets.py
src/schemas/: chats.py  messages.py  token_payload.py
src/security/: config.py  dependencies.py  exceptions.py  schemas.py  utils.py
src/services/: auth.py  chats.py  jwt.py  messages.py  producer.py  users.py
src/services/base/: base_auth.py  base_chats.py  base_jwt.py  base_messages.py  base_producer.py  base_users.py
src/websockets/: router.py  service.py  utils.py
