[tool.poetry]
name = "fastapi-chat"
version = "0.1.0"
description = ""
authors = ["theandrunique <theandrunique@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
motor = "^3.4.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiokafka = "^0.10.0"
pydantic-settings = "^2.2.1"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.1"
httpx = "^0.27.0"
pyright = "^1.1.362"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]

pythonVersion = "3.12"
pythonPlatform = "Linux"